syntax = "proto3";
package helloworld;

service Greeter {
  // Our SayHello rpc accepts HelloRequests and returns HelloReplies
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  // Request message contains the name to be greeted
  string name = 1;
}

message HelloReply {
  // Reply contains the greeting message
  string message = 1;
}

service Admin {
  rpc GetStatCount (StatCountRequest) returns (StatCountReply);
}

message StatCountRequest {}

message StatCountReply {
  uint64 count = 1;
}